--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,12 +4,14 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_house"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_house_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.LandAppCopyProject">
-        <activity android:name=".ViewRoomDetailActivity"></activity>
+        android:theme="@style/Theme.MaterialComponents.Light.NoActionBar">
+        <activity android:name=".ViewRoomDetailActivity"
+            android:theme="@style/Theme.MaterialComponents.Light"
+            ></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
